src/exporter/snapshots/annatto__exporter__exmaralda__tests__serialize.snap
---
source: src/exporter/exmaralda.rs
expression: serialization.unwrap()
---
copy_media = false
doc_anno = "annis::doc"
tier_order = []
