src/exporter/snapshots/annatto__exporter__exmaralda__tests__serialize_custom.snap
---
source: src/exporter/exmaralda.rs
expression: serialization.unwrap()
---
copy_media = true
doc_anno = "annis::not_doc"
tier_order = ["dipl::dipl", "norm::norm"]
